fix align of footer icons

--- a/src/app/styles/Footer.scss
+++ b/src/app/styles/Footer.scss
@@ -11,5 +11,8 @@ $footer-background: #E5E5E5;
     span {
       margin-left: 9px;
     }
+    img {
+      vertical-align: middle;
+    }
   }
 }
